fixed weird portrait repeating on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -353,7 +353,7 @@ main#home h1 {
 		transform: translate3d(100%, 0, 0);
 	}
 	.menu-branding .portrait {
-		background: url(https://res.cloudinary.com/dvvbhpn92/image/upload/c_scale,h_134,q_80/v1567107652/IMG_7826_1_jxj257.png);
+		background: url(https://res.cloudinary.com/dvvbhpn92/image/upload/c_scale,h_153/v1567107652/IMG_7826_1_jxj257.png);
 		width: 150px;
 		height: 150px;
 		opacity: 1;
